# rm4dev

./: CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  README.md  build.sh
docs/: architecture.md  install.md  security.md  troubleshooting.md  usage.md
rm4dev-agent/: README.md  build.sh
rm4dev-agent/brew-fedora/: Containerfile  README.md  build.sh  entrypoint.sh  run.sh
rm4dev-agent/nix-fedora/: Containerfile  build.sh  run.sh
rm4dev-agent/nix-fedora/src/: AGENTS.md  entrypoint.sh
rm4dev-agent/nix-fedora/src/nix/: flake.nix  packages.nix
src/: agent.rs  cli.rs  error.rs  image.rs  lib.rs  main.rs  mounts.rs  naming.rs  process.rs
